
  * usr/bin/Makefile.am, usr/bin/manifest, usr/bin/tmpfsffs,
    usr/share/man/man1/Makefile.am, usr/share/man/man1/manifest.1:
    - added the manifest command
  * debian/control, usr/bin/Makefile.am, usr/bin/purge-old-kernels,
    usr/share/man/man1/Makefile.am, usr/share/man/man1/purge-old-
    kernels.1:
    - move purge-old-kernels over from bikeshed into byobu

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 04 Feb 2016 16:30:00 -0600

byobu (5.102-0ubuntu1) xenial; urgency=medium

  [ Dustin Kirkland ]
  * usr/share/byobu/keybindings/mouse.tmux.disable,
    usr/share/byobu/keybindings/mouse.tmux.enable: LP: #1514377
    - use tmux 2.1's new 'mouse' option, add some comments,
      support old and new
  * configure.ac, debian/control, NEWS, README, usr/lib/byobu/rcs_cost,
    usr/share/appdata/byobu.appdata.xml, usr/share/man/man1/byobu.1,
    usr/share/man/man1/byobu-config.1, usr/share/man/man1/byobu-ctrl-
    a.1, usr/share/man/man1/byobu-enable.1, usr/share/man/man1/byobu-
    janitor.1, usr/share/man/man1/byobu-keybindings.1,
    usr/share/man/man1/byobu-launcher.1, usr/share/man/man1/byobu-
    launcher-install.1, usr/share/man/man1/byobu-launcher-uninstall.1,
    usr/share/man/man1/byobu-layout.1, usr/share/man/man1/byobu-
    prompt.1, usr/share/man/man1/byobu-quiet.1, usr/share/man/man1/byobu-
    reconnect-sockets.1, usr/share/man/man1/byobu-screen.1,
    usr/share/man/man1/byobu-select-backend.1, usr/share/man/man1/byobu-
    select-profile.1, usr/share/man/man1/byobu-select-session.1,
    usr/share/man/man1/byobu-shell.1, usr/share/man/man1/byobu-silent.1,
    usr/share/man/man1/byobu-status.1, usr/share/man/man1/byobu-status-
    detail.1, usr/share/man/man1/byobu-tmux.1, usr/share/man/man1/byobu-
    ugraph.1, usr/share/man/man1/byobu-ulevel.1:
    - replace http://byobu.co links to newly registered http://byobu.org

  [ Jeffrey To ]
  * usr/share/byobu/keybindings/tmux-screen-keys.conf: