@@ -125,7 +125,10 @@ if len(sessions) > 1:
 			sys.stdout.write("  %d. %s\n" % (i, s))
 			i += 1
 		try:
-			choice = int(eval(input("\nChoose 1-%d [1]: " % (i - 1))))
+			try:
+				choice = int(input("\nChoose 1-%d [1]: " % (i - 1)))
+			except:
+				choice = int(eval(input("\nChoose 1-%d [1]: " % (i - 1))))
 			if choice >= 1 and choice < i:
 				break
 			else:
